[FEATURE] 도서 상세페이지 이벤트 연동
1. EventResDto 수정
 - bookId 타입 Int -> String으로 변경
2. EventMapper 추가 내용
 - List<EventResDto> selectByBookId(@Param("bookId") String bookId);
3. EventService 추가 내용
 - public List<EventResDto> selectByBookId(String bookId);
4. EventServiceImple 추가 내용
 -     public List<EventResDto> selectByBookId(String bookId) {
        List<EventResDto> list = mapper.selectByBookId(bookId);
        return (list != null) ? list : java.util.List.of();
    }
5. Event-Mappr 추가 내용
    <select id="selectByBookId" parameterType="string"
          resultType="com.bookat.dto.EventResDto">
    SELECT
      e.EVENT_ID           AS eventId,
      e.BOOK_ID            AS bookId,
      e.TICKET_TYPE        AS ticketType,
      e.EVENT_NAME         AS eventName,
      e.EVENT_DESCRIPTION  AS eventDescription,
      e.EVENT_PRICE        AS eventPrice,
      e.EVENT_IMAGE        AS eventImage,
      e.LOCAL_CODE         AS localCode,
      e.ADDRESS            AS address,
      e.EVENT_DATE         AS eventDate
    FROM EVENT e
    WHERE e.BOOK_ID = #{bookId}
  </select>